RESOLVED FIXED310688
[GTK] ASSERTION FAILED: it != priv->touchEvents.end()
https://bugs.webkit.org/show_bug.cgi?id=310688
Summary [GTK] ASSERTION FAILED: it != priv->touchEvents.end()
Sebastian Krzyszkowiak
Reported 2026-03-24 20:44:13 PDT
ASSERTION FAILED: it != priv->touchEvents.end() /WebKit/Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp(1887) : gboolean webkitWebViewBaseTouchEvent(GtkWidget*, GdkEvent*) 1 0x7f491353086f webkitWebViewBaseTouchEvent(_GtkWidget*, _GdkEvent*)
Attachments
Sebastian Krzyszkowiak
Comment 1 2026-03-24 20:48:04 PDT
EWS
Comment 2 2026-03-25 03:26:39 PDT
Committed 309901@main (e4a5c5e928c3): <https://commits.webkit.org/309901@main> Reviewed commits have been landed. Closing PR #61303 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.