[GTK] WebKitWebViewBase: Don't assert on missing touch events https://bugs.webkit.org/show_bug.cgi?id=310688

Reviewed by Carlos Garcia Campos.

webkitWebViewBaseTouchEvent is itself rejecting events when there's a dialog,
which makes is possible to continue receiving events from sequences that have
been already rejected and not registered in the touchEvents hashmap.
Therefore this case needs to be gracefully handled rather than asserted on.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchEvent):

Canonical link: https://commits.webkit.org/309901@main